--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 altair==4.2.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asgiref==3.5.2
 asttokens==2.0.5
 attrs==21.4.0
 backcall==0.2.0
@@ -26,8 +25,6 @@ fastjsonschema==2.15.3
 fonttools==4.33.3
 gitdb==4.0.9
 GitPython==3.1.27
-gunicorn==20.1.0
-h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.4
 importlib-resources==5.7.1
@@ -77,7 +74,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==304
+pywin32==304;platform_system == "Windows"
 pywinpty==2.0.5
 pyzmq==23.0.0
 requests==2.27.1
@@ -104,7 +101,6 @@ traitlets==5.2.1.post0
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
-uvicorn==0.17.6
 validators==0.19.0
 watchdog==2.1.8
 wcwidth==0.2.5
