--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pywin32==304;platform_system == "Windows"
-pywinpty==2.0.5
+pywinpty==2.0.5;platform_system == "Windows"
 pyzmq==23.0.0
 requests==2.27.1
 scikit-learn==1.1.1
